--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: papayawhip;
 }
 
 code {
@@ -14,6 +15,20 @@ code {
     monospace;
 }
 
+/* Reset */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
 ul {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
